@startuml

title __CONTROLLERS's Class Diagram__\n

  namespace SongCreatorWindow {
    namespace Controllers {
      class SongCreatorWindow.Controllers.MainController {
          ~ anchorPaneWithNotesAndAccordsSelection : AnchorPane
          ~ anchorPaneWithPaths : AnchorPane
          ~ managedPlayer : ManagedPlayer
          ~ playMenuItem : MenuItem
          ~ player : Player
          ~ playerListener : ManagedPlayerListener
          ~ scrollPaneWithPaths : ScrollPane
          ~ selectPathMenuItem : Menu
          ~ selectSoundMenuItem : Menu
          ~ vBoxPaneWithCurrentlySelectedNoteOrAccordProperties : VBox
          ~ vBoxWithNotesAndAccordsProperties : VBox
          + ChangePathClefToAlto()
          + ChangePathClefToBass()
          + ChangePathClefToViolin()
          + DeleteAllPaths()
          + DeleteSelected()
          + DuplicateSelectedPath()
          + ExportProjectToMIDIFile()
          + ImportProjectFromMIDIFile()
          + InsertNewPath()
          + InsertNoteOnMouseClicked()
          + LoadProjectFromFile()
          + MainController()
          + PlayAllPathsWithoutMutedOnes()
          + PrintSongToPNGFile()
          + RecordPath()
          + RenameSelected()
          + SaveProjectToFile()
          + SaveProjectToFileWithDifferentName()
          + StopMusic()
          + UnselectPath()
          + initLoader()
          + selectMusicSymbol()
          - checkPathSelection()
          - projectSavingPreProcess()
      }
    }
  }
  

  namespace SongCreatorWindow {
    namespace Controllers {
      class SongCreatorWindow.Controllers.MusicSymbolsController {
          + MusicSymbolsController()
          + onMusicSymbolClicked()
          + onPathClearSelection()
          + onPathClefChanged()
          + onPathCreated()
          + onPathDeleted()
          + onPathNameRenamed()
      }
    }
  }
  

  SongCreatorWindow.Controllers.MainController o-- SongCreatorWindow.Model.Core.GlobalLoaderDTO : loader
  SongCreatorWindow.Controllers.MainController o-- SongCreatorWindow.Model.ModelManager : modelManager
  SongCreatorWindow.Controllers.MainController o-- SongCreatorWindow.Controllers.MusicSymbolsController : musicSymbolsController
  SongCreatorWindow.Controllers.MainController o-- SongCreatorWindow.Views.ViewMusicSymbolsSelectionHandling : musicSymbolsViewManager
  SongCreatorWindow.Controllers.MainController o-- SongCreatorWindow.Views.ViewManagerModelChangesHandling : viewManager
  SongCreatorWindow.Controllers.MusicSymbolsController .up.|> SongCreatorWindow.Model.Events.IClickedEvent
  SongCreatorWindow.Controllers.MusicSymbolsController .up.|> SongCreatorWindow.Model.Events.IPathEvent
  SongCreatorWindow.Controllers.MusicSymbolsController o-- SongCreatorWindow.Views.ViewManagerModelChangesHandling : modelView
  SongCreatorWindow.Controllers.MusicSymbolsController o-- SongCreatorWindow.Views.ViewMusicSymbolsSelectionHandling : symbolsView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
